# Vocabcom

./: LICENSE  README.md  setup.cfg
vocabcom/: main.py
