[metadata]
name = Vocabcom
version = 1.0.0
description = This package looks for words in Vocabulary.com and finds their definitions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faisaltamanojr/vocabcom
author = Faisal Richard D. Tamano Jr.
author_email = faisalrichardjr@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    beautifulsoup4==4.10.0
    certifi==2021.10.8
    charset-normalizer==2.0.7
    idna==3.3
    requests==2.26.0
    soupsieve==2.3.1
    urllib3==1.26.7

[options.entry_points]
console_scripts =
    vocabcom = vocabcom.main:main
